# automation-exercise

./: .gitignore  Dockerfile  README.md  behave_run_test_for_multiple_users.py  conftest.py  docker-compose.yml  install.sh  open_reports.sh  pyproject.toml  pytest.ini  run_behave_tests.sh  run_tests.sh
allure-report/: index.html
allure-results/: 061a56b7-cdc8-49f4-9bff-24cf1d0860ba-container.json  12a9c9a1-adf8-49d9-9d41-5d74a2daa840-attachment.txt  20d63646-209b-4549-9433-275f8736dbbe-result.json  5968a109-c77d-42c4-86fb-7cefc44fbcf9-container.json  5bfc39c7-0baa-4e73-a1e5-f88443bab47f-container.json  6d40351c-bcb0-4d58-a319-ece6af854cc1-result.json  720b2bcf-76c2-4c75-a203-2709c199c84e-container.json  a22ec66d-26f8-4e4d-b423-5ddfcaf6ceda-container.json  a4a2f7d3-e29a-4eb4-856f-03c19c8d881b-container.json  d2a40469-1c7d-4582-8a7f-62519e9f1344-result.json  df8969f4-f856-4cd4-b07a-915d4face7e3-container.json
data/: payment_info.json  user_data.json  user_data.py
features/: environment.py  place_order_register_before_checkout.feature  run_test_for_multiple_users.py
helpers/: account_creation.py  add_product_to_cart_and_proceed_to_checkout.py  attach_screenshot.py  check_if_user_exists.py  create_account_function.py  data_loader.py  delete_account.py  delete_account_function.py  place_order.py
html-report/: index.html
pages/: account_created_page.py  account_deleted_page.py  account_info_page.py  cart_page.py  checkout_page.py  header.py  home_page.py  login_page.py  order_placed_page.py  payment_page.py  signup_page.py
tests/: test_API_tests.py  (+2 more)
(+30 files in other folders)
