[tool.poetry]
name = "automation-exercise"
version = "0.1.0"
description = ""
authors = ["103679685+UserAnn7@users.noreply.github.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
playwright = "^1.44.0"
pytest = "^8.2.0"
pytest-playwright = "^0.4.4"
pytest-html = "^4.1.1"
allure-pytest = "^2.13.2"
